# ScalingLinux

./: CMakeLists.txt  README.md
inc/: argument_parser.h  constant.h  dbus_connection.h  desktop_resizer.h  mutter_config_display.h  screen_resource.h
src/: argument_parser.cpp  dbus_connection.cpp  desktop_resizer.cpp  main.cpp  mutter_config_display.cpp  screen_resource.cpp
